--- a/server/test/fixtures/feedbacks.yml
+++ b/server/test/fixtures/feedbacks.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: feedbacks
+#
+#  id          :integer          not null, primary key
+#  user_id     :integer
+#  safety      :integer
+#  cleanliness :integer
+#  comfort     :integer
+#  info        :string
+#  recommend   :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
