Upgrades to submit feedback

--- a/server/test/fixtures/feedbacks.yml
+++ b/server/test/fixtures/feedbacks.yml
@@ -2,15 +2,20 @@
 #
 # Table name: feedbacks
 #
-#  id          :integer          not null, primary key
-#  user_id     :integer
-#  safety      :integer
-#  cleanliness :integer
-#  comfort     :integer
-#  info        :string
-#  recommend   :integer
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id             :integer          not null, primary key
+#  user_id        :integer
+#  name           :string
+#  safety         :integer
+#  cleanliness    :integer
+#  comfort        :integer
+#  friendliness   :integer
+#  beauty         :integer
+#  transportation :integer
+#  info           :string
+#  latitude       :float
+#  longitude      :float
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
